--- a/1.ipynb
+++ b/1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cabd2542",
+   "id": "e170998e",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the ETT dataset (adjust the path as needed)\n",
-    "ett_data = pd.read_csv(r'C:\\Users\\ashis\\OneDrive\\Documents\\IIT Patna\\1st Semester\\Edge Computing\\Assignment\\all_six_datasets\\all_six_datasets\\ETT-small\\ETTm1.csv')\n",
+    "ett_data = pd.read_csv('all_six_datasets//ETT-small//ETTm1.csv')\n",
     "\n",
     "\n",
     "# Plotting the dependent variables\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dff932f",
+   "id": "6727d6f5",
    "metadata": {},
    "outputs": [],
    "source": []
